kubernetes/gitlab/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: freeipa-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gitlab.lab.internal
      secretName: gitlab-tls
  rules:
    - host: gitlab.lab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8181
